# testing-language-server

./: .testingls.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release-adapter.yml  release.yml
.vim/: coc-settings.json
crates/adapter/: Cargo.toml
crates/adapter/src/: lib.rs  log.rs  main.rs  model.rs
crates/adapter/src/runner/: cargo_nextest.rs  cargo_test.rs  deno.rs  go.rs  jest.rs  mod.rs  node_test.rs  phpunit.rs  util.rs  vitest.rs
crates/adapter/tests/: go-test.txt
crates/jest-adapter/: Cargo.toml
crates/jest-adapter/src/: main.rs
crates/rust-adapter/: Cargo.toml
crates/rust-adapter/src/: main.rs
demo/: .testingls.toml  README.md
demo/.helix/: config.toml  languages.toml
demo/.vim/: coc-settings.json
demo/deno/: main_test.ts  output.txt
demo/jest/: README.md  another.spec.js  bun.lockb  index.spec.js  output.json  package.json
demo/node-test/: index.test.js  output.xml  package.json  util.js
demo/phpunit/: .mise.toml  composer.json  output.xml
demo/phpunit/src/: Calculator.php  CalculatorTest.php
demo/rust/: Cargo.toml
demo/rust/src/: lib.rs
demo/vitest/: basic.test.ts
doc/: ADAPTER_SPEC.md
src/: error.rs  language.rs  lib.rs  log.rs  main.rs  scheduler.rs  server.rs  spec.rs  util.rs
test_proj/.vim/: coc-settings.json
test_proj/go/: README.md
test_proj/go/demo/: util_test.go
test_proj/jest/: README.md  another.spec.js  bun.lockb  index.spec.js  output.json  package.json
test_proj/rust/: Cargo.toml
test_proj/rust/src/: lib.rs
