[package]
name = "testing-language-server"
version = "0.1.7"
edition = "2021"
description = "LSP server for testing"
license = "MIT"

[workspace]
members = [ "crates/adapter"]
exclude = ["demo"]

[[bin]]
name = "testing-language-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.dependencies]
lsp-types = "0.95.1"
serde_json = "1.0.116"
serde = "1.0.198"
anyhow = "1.0.82"
thiserror = "1.0.59"
regex = "1.10.4"
tracing-appender = "0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false }
dirs = "5.0.1"
clap = { version = "4.5.4", features = ["derive"] }
once_cell = "1.19.0"
strum = "0.26.2"
glob = "0.3.1"

[dependencies]
lsp-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing-appender = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false }
dirs = { workspace = true }
clap = { workspace = true }
once_cell = { workspace = true }
strum = { workspace = true, features = ["derive"] }
glob = { workspace = true }
globwalk = "0.9.1"
tree-sitter-php = "0.22.8"
chrono = "0.4.38"
toml = "0.8.19"
