[package]
name = "testing-ls-adapter"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testing-language-server = "0.0.1"
lsp-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
tree-sitter = "0.22.5"
tree-sitter-rust = "0.21.2"
anyhow = { workspace = true }
tempfile = "3.10.1"
tree-sitter-javascript = "0.21.0"
