[package]
name = "testing-ls-jest-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
testing-language-server = { path = "../../" }
lsp-types = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
tempfile = "3.10.1"
tree-sitter = "0.22.5"
tree-sitter-javascript = "0.21.0"
